--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <span class="desc">The ultimate Minecraft issue resolver!</span>
         <a class="button" href="/questions.html">Try it out</a>
     </div>
+    <h5>Made by egorro (aka kiwix aka yehorscode)</h5>
 </body>
 </html>
