fix the "./" thing

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IsItQuark?</title>
-    <link rel="stylesheet" href="homepage.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./homepage.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div class="top-part">
         <h1>Welcome to IsItSquark!</h1>
         <span class="desc">The ultimate Minecraft issue resolver!</span>
-        <a class="button" href="/questions.html">Try it out</a>
+        <a class="button" href="./questions.html">Try it out</a>
     </div>
     <h5>Made by egorro (aka kiwix aka yehorscode)</h5>
 </body>
